--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <meta name="MobileOptimized" content="320">
     <meta http-equiv="cleartype" content="on">
 
+    <!-- OpenTok.js library -->
+    <script src="https://static.opentok.com/v2/js/opentok.js"></script>
+
     <style>
         html,
         body {
