--- a/index.html
+++ b/index.html
@@ -13,21 +13,29 @@
     <script src="https://static.opentok.com/v2/js/opentok.js"></script>
 
     <style>
-html,
-body {
-  margin: 0;
-  padding: 0;
-    background-color: black;
-}
-        div[id^=OT] {
-          display: none;
-        }
+      html, body {
+        margin: 0;
+        padding: 0;
+        background-color: black;
+      }
+
+      div[id^=OT] {
+        display: none;
+      }
+
+      @font-face {
+        font-family: neuropol;
+        src: url('assets/neuropol.ttf');
+      }
     </style>
   </head>
 
   <body style="display: flex; height: 100vh; justify-content: center; align-items: center">
 
     <div id="content"></div>
+
+    <div style="font-family:neuropol; position:absolute; left:-1000px; visibility:hidden;">.</div>
+
     <script src="dist/vendor.bundle.js"></script>
     <script src="dist/bundle.js"></script>
 
